@@ -1340,27 +1340,43 @@ void Enemy::kill() {
   else {
     // Replace the enemy sprites.
     clear_sprites();
+    bool special_ground = false;
     switch (get_ground_below()) {
 
       case Ground::HOLE:
-        // TODO animation of falling into a hole.
-        Sound::play("jump");
+        if (get_obstacle_behavior() != ObstacleBehavior::FLYING) {
+          // TODO animation of falling into a hole.
+          special_ground = true;
+          Sound::play("jump");
+        }
         break;
 
       case Ground::DEEP_WATER:
-        // TODO water animation.
-        Sound::play("splash");
+        if (get_obstacle_behavior() != ObstacleBehavior::FLYING &&
+            get_obstacle_behavior() != ObstacleBehavior::SWIMMING) {
+          // TODO water animation.
+          special_ground = true;
+          Sound::play("splash");
+        }
         break;
 
       case Ground::LAVA:
-        // TODO lava animation.
-        Sound::play("splash");
+        if (get_obstacle_behavior() != ObstacleBehavior::FLYING &&
+            get_obstacle_behavior() != ObstacleBehavior::SWIMMING) {
+          // TODO lava animation.
+          special_ground = true;
+          Sound::play("splash");
+        }
         break;
 
       default:
-        create_sprite("enemies/enemy_killed");
-        Sound::play("enemy_killed");
         break;
+    }
+
+    if (!special_ground) {
+      // Normal dying animation.
+      create_sprite("enemies/enemy_killed");
+      Sound::play("enemy_killed");
     }
   }
 
